Fixes issue DT-615 scrollbar appearing in feature section on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -270,7 +270,6 @@ hr.line {
 	text-align: center;
 	position: fixed;
 	overflow-x: hidden;
-	overflow-y: scroll;
 	float: left;
 	left: 0;
 	height: 100%;
